--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <br><br>Before this I was an undergrad in computer science at <a href="https://www.cse.iitm.ac.in/"style="color:DARKVOILET;">IIT Madras</a>.
 
-<br><br>I am interested in complexity theory and algorithms, specifically hardness of approximation, sum of squares algorithms and algebra in computation.
+<br><br>I am interested in complexity theory and algorithms, specifically hardness of approximation, sum of squares algorithms, algebra in computation and coding theory.
 
  <br> <br>
 
