--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<img src="./pic_3.jpg" id="photo">
 
 			<p>
-        I am a graduate student in theoretical computer science at <a href="https://toc.seas.harvard.edu/"style="color:DARKVOILET;"> Harvard University</a>. I am very fortunate to be advised by <a href="http://madhu.seas.harvard.edu/"style="color:DARKVOILET;"> Madhu Sudan</a>.
+        I am a graduate student in theoretical computer science at <a href="https://toc.seas.harvard.edu/"style="color:DARKVOILET;"> Harvard University</a> where I am advised by <a href="http://madhu.seas.harvard.edu/"style="color:DARKVOILET;"> Madhu Sudan</a>.
 
 <br><br>Before this I was an undergrad in computer science at <a href="https://www.cse.iitm.ac.in/"style="color:DARKVOILET;">IIT Madras</a>.
 
