--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 			<p></p><h2>Publications</h2>
-<li><font size="4"><a href="https://arxiv.org/abs/2006.09969"style="color:DARKVOILET;">Playing Unique Games on Certified Small-Set Expanders.</a></font><br>Mitali Bafna, Boaz Barak, Pravesh Kothari, Tselil Schramm, David Steurer<br>  </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2006.09969"style="color:DARKVOILET;">Playing Unique Games on Certified Small-Set Expanders.</a></font><br>Mitali Bafna, Boaz Barak, Pravesh Kothari, Tselil Schramm, David Steurer<br> STOC 2021 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/1907.08185"style="color:DARKVOILET;">Imperfect Gaps in Gap-ETH and PCPs.</a></font><br>Mitali Bafna, Nikhil Vyas <br> CCC 2019<br> </li>
 <li><font color="#05a" size="4"><a href="https://arxiv.org/abs/1808.08907"style="color:DARKVOILET;">Communication-Rounds Tradeoffs for Common Randomness and Secret Key Generation.</a></font><br>  Mitali Bafna, Badih Ghazi, Noah Golowich, Madhu Sudan <br> SODA 2019<br> </li>
 				<li><font color="“#05a”" size="4"><a href="https://arxiv.org/abs/1812.05013"style="color:DARKVOILET;"> Thwarting Adversarial Examples: An L_0-Robust Sparse Fourier Transform.</a></font>  <br>  Mitali Bafna, Jack Murtagh, Nikhil Vyas<br>NeurIPS 2018  <br>    </li>
@@ -44,8 +44,8 @@
 </a></font><br> Mitali Bafna, Jonathan Ullman<br>COLT 2017<br></li>
 <li><font color="#05a" size="4"><a href="https://eccc.weizmann.ac.il/report/2016/132/"style="color:DARKVOILET;">On the Sensitivity Conjecture for Read-k Formulas</a></font><br> Mitali Bafna, Satyanarayana V. Lokam, Sébastien Tavenas, Ameya Velingker <br> MFCS 2016<br> </li>
 
-<p></p><h2>Manuscripts</h2>
-<li><font size="4"><a href="https://arxiv.org/abs/1709.06036"style="color:DARKVOILET">Local decoding and testing of polynomials over grids</a></font><br>Mitali Bafna, Srikanth Srinivasan, Madhu Sudan<br> Under submission<br> </li>
+<p></p><h2>Journal</h2>
+<li><font size="4"><a href="https://arxiv.org/abs/1709.06036"style="color:DARKVOILET">Local decoding and testing of polynomials over grids</a></font><br>Mitali Bafna, Srikanth Srinivasan, Madhu Sudan<br> RSA <br> </li>
 
 
 <p></p><h2>Teaching</h2>
