--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </a></font><br> Mitali Bafna, Jonathan Ullman<br>COLT 2017<br></li>
 <li><font color="#05a" size="4"><a href="https://eccc.weizmann.ac.il/report/2016/132/"style="color:DARKVOILET;">On the Sensitivity Conjecture for Read-k Formulas</a></font><br> Mitali Bafna, Satyanarayana V. Lokam, Sébastien Tavenas, Ameya Velingker <br> MFCS 2016<br> </li>
 
-<p></p><h2>Journal</h2>
-<li><font size="4"><a href="https://arxiv.org/abs/1709.06036"style="color:DARKVOILET">Local decoding and testing of polynomials over grids</a></font><br>Mitali Bafna, Srikanth Srinivasan, Madhu Sudan<br> RSA <br> </li>
+<p></p><h3>Journal</h2>
+<li><font size="4"><a href="https://arxiv.org/abs/1709.06036"style="color:DARKVOILET">Local decoding and testing of polynomials over grids</a></font><br>Mitali Bafna, Srikanth Srinivasan, Madhu Sudan<br> Random Structures and Algorithms <br> </li>
 
 
 <p></p><h2>Teaching</h2>
