--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <br><br>Before this I was an undergrad in computer science at <a href="https://www.cse.iitm.ac.in/"style="color:DARKVOILET;">IIT Madras</a>.
 
-<br><br>I am interested in complexity theory and algorithms, specifically hardness of approximation, sum of squares algorithms, algebra in computation and coding theory.
+<br><br>I am interested in complexity theory and algorithms, specifically hardness of approximation and sum of squares algorithms.
 
  <br> <br>
 
@@ -46,7 +46,8 @@
 </a></font><br> Mitali Bafna, Jonathan Ullman<br>COLT 2017<br></li>
 <li><font color="#05a" size="4"><a href="https://eccc.weizmann.ac.il/report/2016/132/"style="color:DARKVOILET;">On the Sensitivity Conjecture for Read-k Formulas</a></font><br> Mitali Bafna, Satyanarayana V. Lokam, Sébastien Tavenas, Ameya Velingker <br> MFCS 2016<br> </li>
 
-
+<p></p><h2>Manuscripts</h2>
+<li><font size="4">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>Mitali Bafna, Madhu Sudan, Santhoshini Velusamy, David Xiang<br> </li>
 
 <p></p><h2>Teaching</h2>
 <li><font size="4"><a href="http://people.seas.harvard.edu/~madhusudan/courses/Spring2019/"style="color:DARKVOILET;"> Information Theory in Computer Science</a> (Harvard CS229r, Spring 2019)</font><br>Graduate Teaching Fellow, assistant to Madhu Sudan.<br></li>
