--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 
 <p></p><h2>Manuscripts</h2>
 <li><font size="4">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>Mitali Bafna, Madhu Sudan, Santhoshini Velusamy, David Xiang<br> </li>
+<li><font size="4">An Exposition of Dinur-Khot-Kindler-Minzer-Safra’s Proof for the
+2-to-2 Games Conjecture.</a></font><br>Mitali Bafna, Chi-Ning Chou, Zhao Song<br> </li>
+
 
 <p></p><h2>Teaching</h2>
 <li><font size="4"><a href="http://people.seas.harvard.edu/~madhusudan/courses/Spring2019/"style="color:DARKVOILET;"> Information Theory in Computer Science</a> (Harvard CS229r, Spring 2019)</font><br>Graduate Teaching Fellow, assistant to Madhu Sudan.<br></li>
