--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 			<p></p><h2>Publications</h2>
-<li><font size="4">Optimal Fine-grained Hardness of Approximation of Linear Equations.</a></font><br>Mitali Bafna, Nikhil Vyas<br> ICALP 2021 <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2106.13210"style="color:DARKVOILET;">Optimal Fine-grained Hardness of Approximation of Linear Equations.</a></font><br>Mitali Bafna, Nikhil Vyas<br> ICALP 2021 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2006.09969"style="color:DARKVOILET;">Playing Unique Games on Certified Small-Set Expanders.</a></font><br>Mitali Bafna, Boaz Barak, Pravesh Kothari, Tselil Schramm, David Steurer<br> STOC 2021 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/1709.06036"style="color:DARKVOILET">Local decoding and testing of polynomials over grids</a></font><br>Mitali Bafna, Srikanth Srinivasan, Madhu Sudan<br> Random Structures and Algorithms (Journal) <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/1907.08185"style="color:DARKVOILET;">Imperfect Gaps in Gap-ETH and PCPs.</a></font><br>Mitali Bafna, Nikhil Vyas <br> CCC 2019<br> </li>
