--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 
 			<p></p><h2>Publications</h2>
+<li><font size="4"><a href="https://arxiv.org/abs/2011.04658"style="color:DARKVOILET;">High Dimensional Expanders: Eigenstripping, Pseudorandomness, and Unique Games.</a></font><br>Mitali Bafna, Max Hopkins, Tali Kaufman, Shachar Lovett<br> Under Submission  <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2106.13210"style="color:DARKVOILET;">Optimal Fine-grained Hardness of Approximation of Linear Equations.</a></font><br>Mitali Bafna, Nikhil Vyas<br> ICALP 2021 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2006.09969"style="color:DARKVOILET;">Playing Unique Games on Certified Small-Set Expanders.</a></font><br>Mitali Bafna, Boaz Barak, Pravesh Kothari, Tselil Schramm, David Steurer<br> STOC 2021 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/1709.06036"style="color:DARKVOILET">Local decoding and testing of polynomials over grids</a></font><br>Mitali Bafna, Srikanth Srinivasan, Madhu Sudan<br> Random Structures and Algorithms (Journal) <br> </li>
@@ -47,8 +48,8 @@
 <li><font color="#05a" size="4"><a href="https://eccc.weizmann.ac.il/report/2016/132/"style="color:DARKVOILET;">On the Sensitivity Conjecture for Read-k Formulas</a></font><br> Mitali Bafna, Satyanarayana V. Lokam, Sébastien Tavenas, Ameya Velingker <br> MFCS 2016<br> </li>
 
 <p></p><h2>Manuscripts</h2>
-<li><font size="4">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>Mitali Bafna, Madhu Sudan, Santhoshini Velusamy, David Xiang<br> </li>
-<li><font size="4">An Exposition of Dinur-Khot-Kindler-Minzer-Safra’s Proof for the
+<li><font size="4"><a href="https://arxiv.org/abs/2102.00602"style="color:DARKVOILET;">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>Mitali Bafna, Madhu Sudan, Santhoshini Velusamy, David Xiang<br> </li>
+<li><font size="4"><a href="dkkmsnotes.pdf"style="color:DARKVOILET;">An Exposition of Dinur-Khot-Kindler-Minzer-Safra’s Proof for the
 2-to-2 Games Conjecture.</a></font><br>Mitali Bafna, Chi-Ning Chou, Zhao Song<br> </li>
 
 
