--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 			<p></p><h2>Publications</h2>
-<li><font size="4"><a href="https://arxiv.org/abs/2111.09444"style="color:DARKVOILET;">Hypercontractivity on High Dimensional Expanders.</a></font><br>Mitali Bafna, Max Hopkins, Tali Kaufman, Shachar Lovett<br> Under Submission <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2111.09444"style="color:DARKVOILET;">Hypercontractivity on High Dimensional Expanders: a Local-to-Global Approach for Higher Moments.</a></font><br>Mitali Bafna, Max Hopkins, Tali Kaufman, Shachar Lovett<br> STOC 2022 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2011.04658"style="color:DARKVOILET;">High Dimensional Expanders: Eigenstripping, Pseudorandomness, and Unique Games.</a></font><br>Mitali Bafna, Max Hopkins, Tali Kaufman, Shachar Lovett<br> SODA 2022  <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2106.13210"style="color:DARKVOILET;">Optimal Fine-grained Hardness of Approximation of Linear Equations.</a></font><br>Mitali Bafna, Nikhil Vyas<br> ICALP 2021 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2006.09969"style="color:DARKVOILET;">Playing Unique Games on Certified Small-Set Expanders.</a></font><br>Mitali Bafna, Boaz Barak, Pravesh Kothari, Tselil Schramm, David Steurer<br> STOC 2021 <br> </li>
