--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h1>Mitali Bafna</h1>
 			<p>
 			mitalibafna at gmail.com<br>
-      mitalibafna at g.harvard.edu
+      mitalib@andrew.cmu.edu<br> Office - 7123
 			</p>
 		</div>
 
