--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<div id="logo">
 			<h1>Mitali Bafna</h1>
 			<p>
-			mitalibafna at gmail.com<br>
-      mitalib@andrew.cmu.edu<br> Office - 7123
+			mitalibafna at gmail dot com (Preferred)<br>
+      mitalib at andrew dot cmu dot edu<br> Office - 7123
 			</p>
 		</div>
 
@@ -38,7 +38,7 @@ My research is focussed on complexity theory and algorithms, specifically the co
 
 
 			<p></p><h2>Publications</h2>
-<li><font size="4"><a href=""style="color:DARKVOILET;">Polynomial-Time Power-Sum Decomposition of Polynomials.</a></font><br>Mitali Bafna, Tim Hsieh, Pravesh Kothari, Jeff Xu<br> FOCS 2022 <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2208.00122"style="color:DARKVOILET;">Polynomial-Time Power-Sum Decomposition of Polynomials.</a></font><br>Mitali Bafna, Tim Hsieh, Pravesh Kothari, Jeff Xu<br> FOCS 2022 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2111.09444"style="color:DARKVOILET;">Hypercontractivity on High Dimensional Expanders: a Local-to-Global Approach for Higher Moments.</a></font><br>Mitali Bafna, Max Hopkins, Tali Kaufman, Shachar Lovett<br> STOC 2022 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2011.04658"style="color:DARKVOILET;">High Dimensional Expanders: Eigenstripping, Pseudorandomness, and Unique Games.</a></font><br>Mitali Bafna, Max Hopkins, Tali Kaufman, Shachar Lovett<br> SODA 2022  <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2106.13210"style="color:DARKVOILET;">Optimal Fine-grained Hardness of Approximation of Linear Equations.</a></font><br>Mitali Bafna, Nikhil Vyas<br> ICALP 2021 <br> </li>
