--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</p>
 		</div>
 
-		<img src="./a.jpeg" id="photo">
+		<img src="./a.jpeg" id="photo" width="200%" height="auto">
 
 			<p>
 				
