--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div id="page">
 		<div id="logo">
-			<h1>Mitali Bafna</h1>
+			<h1>Mitali Bafna</h1> <br>
 			<p>
 			mitalibafna at gmail dot com (Preferred)<br>
       mitalib at andrew dot cmu dot edu<br> Office - 7123
@@ -24,7 +24,7 @@
 		<img src="./a.jpeg" id="photo">
 
 			<p>
- <br> <br> <br>				
+ <br> <br> 				
 I am a postdoc at CMU hosted by Prof. Aayush Jain and Prof. Pravesh Kothari. Before this, I was a graduate student in theoretical computer science at Harvard University where I was advised by  Prof. Madhu Sudan. Even before, I did my undergrad in computer science from IIT Madras.
 
  <br>
