--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h1>Mitali Bafna</h1> <br>
 			<p>
 			mitalibafna at gmail dot com (Preferred)<br>
-      mitalib at andrew dot cmu dot edu<br> Office - 7123
+     			<br> Office - 7123
 			</p>
 		</div>
 
