--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="logo">
 			<h1>Mitali Bafna</h1> <br>
 			<p>
-			mitalibafna at gmail dot com (Preferred)<br>
+			mitalibafna at gmail dot com <br>
      			<br>
 			</p>
 		</div>
