--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+.boxed {
+  border: 1px solid green ;
+}
 <html class="mitali"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
