--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			mitalibafna at gmail dot com <br>
 			</p>
 		</div>
-
+<div class="boxed">
 		<img src="./a.jpeg" id="photo">
-
+</div>
 			<p>
 				
 <div class="boxed">
