--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div id="page">
 		<div id="logo">
-			<h1>Mitali Bafna</h1> <br>
+			<h1>Mitali Bafna</h1> 
 			<p>
 			mitalibafna at gmail dot com <br>
 			</p>
