--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			mitalibafna at gmail dot com <br>
 			</p>
 		</div>
-<div class="boxed">
+<div class="boxed2">
 		<img src="./a.jpeg" id="photo">
 </div>
 			<p>
