--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 	<div id="page">
 		<div id="logo">
-			<h1>Mitali Bafna</h1> 
+			<h1>Mitali Bafna</h1>  </div>
 			<p>
-				<div class="boxed2">
-		<img src="./a.jpeg" id="photo">
-</div>
+				
 			mitalibafna at gmail dot com <br>
 			</p>
-		</div>
-
+		
+<div class="boxed2">
+		<img src="./a.jpeg" id="photo">
+</div>
 			<p>
 				
 <div class="boxed">
