--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 	<div id="page">
 		<div id="logo">
-			<h1>Mitali Bafna</h1>  </div>
+			<h1>Mitali Bafna</h1> 
 			<p>
 				
 			mitalibafna at gmail dot com <br>
 			</p>
-		
+		 </div>
 <div class="boxed2">
 		<img src="./a.jpeg" id="photo">
 </div>
