--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div id="page">
 		<div id="logo">
-			<h1>Mitali Bafna</h1> <br>
+			<h1>Mitali Bafna</h1> 
 			<p>
 				
 			mitalibafna at gmail dot com <br>
@@ -26,7 +26,6 @@
 			<p>
 				
 <div class="boxed">
-<br>
 I am a postdoc at CMU hosted by Prof. Aayush Jain and Prof. Pravesh Kothari. Before this, I was a graduate student in theoretical computer science at Harvard University where I was advised by  Prof. Madhu Sudan. Even before, I did my undergrad in computer science from IIT Madras.
 
  <br>
