--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ My research is focussed on complexity theory and algorithms, specifically the co
 
 
 			<p></p><h2>Publications</h2>
+<li><font size="4"><a href="https://arxiv.org/abs/2308.09668"style="color:DARKVOILET;">Characterizing Direct Product Testing via Coboundary Expansion.</a></font><br>Mitali Bafna, Dor Minzer<br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2304.07284"style="color:DARKVOILET;">Solving Unique Games over Globally Hypercontractive Graphs.</a></font><br>Mitali Bafna, Dor Minzer<br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2208.00122"style="color:DARKVOILET;">Polynomial-Time Power-Sum Decomposition of Polynomials.</a></font><br>Mitali Bafna, Tim Hsieh, Pravesh Kothari, Jeff Xu<br> FOCS 2022 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2111.09444"style="color:DARKVOILET;">Hypercontractivity on High Dimensional Expanders: a Local-to-Global Approach for Higher Moments.</a></font><br>Mitali Bafna, Max Hopkins, Tali Kaufman, Shachar Lovett<br> STOC 2022 <br> </li>
