--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<p>
 				
 <div class="boxed">
-I am a postdoc at CMU hosted by Prof. Aayush Jain and Prof. Pravesh Kothari. Before this, I was a graduate student in theoretical computer science at Harvard University where I was advised by  Prof. Madhu Sudan. Even before, I did my undergrad in computer science from IIT Madras.
+I am a postdoc at MIT Math. Before this I did a one-year postdoc at CMU hosted by Prof. Aayush Jain and Prof. Pravesh Kothari. I graduated from Harvard in 2022 advised by Prof. Madhu Sudan and was an undergrad at IIT Madras.
 
  <br>
 				
