--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</p>
 		 </div>
 <div class="boxed2">
-		<img src="./a.jpeg" id="photo">
+		<img src="./a3.jpeg" id="photo">
 </div>
 			<p>
 				
