--- a/index.html
+++ b/index.html
@@ -39,26 +39,25 @@ My research is focussed on complexity theory and algorithms, specifically the co
 
 
 			<p></p><h2>Publications</h2>
-<li><font size="4"><a href="https://eccc.weizmann.ac.il/report/2024/020/"style="color:DARKVOILET;">Constant Degree Direct Product Testers with Small Soundness.</a></font><br>with Noam Lifshitz and Dor Minzer<br> </li>
-<li><font size="4"><a href="https://arxiv.org/abs/2308.09668"style="color:DARKVOILET;">Characterizing Direct Product Testing via Coboundary Expansion.</a></font><br>with Dor Minzer<br> STOC 2024 <br> </li>
-<li><font size="4"><a href="https://arxiv.org/abs/2304.07284"style="color:DARKVOILET;">Solving Unique Games over Globally Hypercontractive Graphs.</a></font><br>with Dor Minzer<br> </li>
-<li><font size="4"><a href="https://arxiv.org/abs/2208.00122"style="color:DARKVOILET;">Polynomial-Time Power-Sum Decomposition of Polynomials.</a></font><br>with Tim Hsieh, Pravesh Kothari and Jeff Xu<br> FOCS 2022 <br> </li>
-<li><font size="4"><a href="https://arxiv.org/abs/2111.09444"style="color:DARKVOILET;">Hypercontractivity on High Dimensional Expanders: a Local-to-Global Approach for Higher Moments.</a></font><br>with Max Hopkins, Tali Kaufman and Shachar Lovett<br> STOC 2022 <br> </li>
-<li><font size="4"><a href="https://arxiv.org/abs/2011.04658"style="color:DARKVOILET;">High Dimensional Expanders: Eigenstripping, Pseudorandomness, and Unique Games.</a></font><br>with Max Hopkins, Tali Kaufman and Shachar Lovett<br> SODA 2022  <br> </li>
-<li><font size="4"><a href="https://arxiv.org/abs/2006.09969"style="color:DARKVOILET;">Playing Unique Games on Certified Small-Set Expanders.</a></font><br>with Boaz Barak, Pravesh Kothari, Tselil Schramm and David Steurer<br> STOC 2021 <br> </li>
-<li><font size="4"><a href="https://arxiv.org/abs/2106.13210"style="color:DARKVOILET;">Optimal Fine-grained Hardness of Approximation of Linear Equations.</a></font><br>with Nikhil Vyas<br> ICALP 2021 <br> </li>
-<li><font size="4"><a href="https://arxiv.org/abs/1709.06036"style="color:DARKVOILET">Local decoding and testing of polynomials over grids</a></font><br>with Srikanth Srinivasan and Madhu Sudan<br> Random Structures and Algorithms (Journal) <br> </li>
-<li><font size="4"><a href="https://arxiv.org/abs/1907.08185"style="color:DARKVOILET;">Imperfect Gaps in Gap-ETH and PCPs.</a></font><br>with Nikhil Vyas <br> CCC 2019<br> </li>
-<li><font color="#05a" size="4"><a href="https://arxiv.org/abs/1808.08907"style="color:DARKVOILET;">Communication-Rounds Tradeoffs for Common Randomness and Secret Key Generation.</a></font><br>  with Badih Ghazi, Noah Golowich and Madhu Sudan <br> SODA 2019<br> </li>
-				<li><font color="“#05a”" size="4"><a href="https://arxiv.org/abs/1812.05013"style="color:DARKVOILET;"> Thwarting Adversarial Examples: An L_0-Robust Sparse Fourier Transform.</a></font>  <br>  with Jack Murtagh and Nikhil Vyas<br>NeurIPS 2018  <br>    </li>
-<li><font color="#05a" size="4"><a href="https://arxiv.org/abs/1702.02970"style="color:DARKVOILET;"> The Price of Selection in Differential Privacy.
-</a></font><br> with Jonathan Ullman<br>COLT 2017<br></li>
-<li><font color="#05a" size="4"><a href="https://eccc.weizmann.ac.il/report/2016/132/"style="color:DARKVOILET;">On the Sensitivity Conjecture for Read-k Formulas</a></font><br> with Satyanarayana V. Lokam, Sébastien Tavenas and Ameya Velingker <br> MFCS 2016<br> </li>
+<li><font size="4"><a href="https://eccc.weizmann.ac.il/report/2024/020/"style="color:DARKVOILET;">Constant Degree Direct Product Testers with Small Soundness.</a></font><br>&nbsp;&nbsp;with Noam Lifshitz and Dor Minzer<br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2308.09668"style="color:DARKVOILET;">Characterizing Direct Product Testing via Coboundary Expansion.</a></font><br>&nbsp;&nbsp;with Dor Minzer<br> STOC 2024 <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2304.07284"style="color:DARKVOILET;">Solving Unique Games over Globally Hypercontractive Graphs.</a></font><br>&nbsp;&nbsp;with Dor Minzer<br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2208.00122"style="color:DARKVOILET;">Polynomial-Time Power-Sum Decomposition of Polynomials.</a></font><br>&nbsp;&nbsp;with Tim Hsieh, Pravesh Kothari and Jeff Xu<br> FOCS 2022 <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2111.09444"style="color:DARKVOILET;">Hypercontractivity on High Dimensional Expanders: a Local-to-Global Approach for Higher Moments.</a></font><br>&nbsp;&nbsp;with Max Hopkins, Tali Kaufman and Shachar Lovett<br> STOC 2022 <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2011.04658"style="color:DARKVOILET;">High Dimensional Expanders: Eigenstripping, Pseudorandomness, and Unique Games.</a></font><br>&nbsp;&nbsp;with Max Hopkins, Tali Kaufman and Shachar Lovett<br> SODA 2022  <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2006.09969"style="color:DARKVOILET;">Playing Unique Games on Certified Small-Set Expanders.</a></font><br>&nbsp;&nbsp;with Boaz Barak, Pravesh Kothari, Tselil Schramm and David Steurer<br> STOC 2021 <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2106.13210"style="color:DARKVOILET;">Optimal Fine-grained Hardness of Approximation of Linear Equations.</a></font><br>&nbsp;&nbsp;with Nikhil Vyas<br> ICALP 2021 <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/1709.06036"style="color:DARKVOILET">Local decoding and testing of polynomials over grids</a></font><br>&nbsp;&nbsp;with Srikanth Srinivasan and Madhu Sudan<br> Random Structures and Algorithms (Journal) <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/1907.08185"style="color:DARKVOILET;">Imperfect Gaps in Gap-ETH and PCPs.</a></font><br>&nbsp;&nbsp;with Nikhil Vyas <br> CCC 2019<br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/1808.08907"style="color:DARKVOILET;">Communication-Rounds Tradeoffs for Common Randomness and Secret Key Generation.</a></font><br>&nbsp;&nbsp;with Badih Ghazi, Noah Golowich and Madhu Sudan <br> SODA 2019<br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/1812.05013"style="color:DARKVOILET;"> Thwarting Adversarial Examples: An L_0-Robust Sparse Fourier Transform.</a></font>  <br>&nbsp;&nbsp;with Jack Murtagh and Nikhil Vyas<br>NeurIPS 2018  <br>    </li>
+<li><font size="4"><a href="https://arxiv.org/abs/1702.02970"style="color:DARKVOILET;"> The Price of Selection in Differential Privacy.</a></font><br>&nbsp;&nbsp;with Jonathan Ullman<br>COLT 2017<br></li>
+<li><font size="4"><a href="https://eccc.weizmann.ac.il/report/2016/132/"style="color:DARKVOILET;">On the Sensitivity Conjecture for Read-k Formulas</a></font><br>&nbsp;&nbsp;with Satyanarayana V. Lokam, Sébastien Tavenas and Ameya Velingker <br> MFCS 2016<br> </li>
 
 <p></p><h2>Manuscripts</h2>
-<li><font size="4"><a href="https://arxiv.org/abs/2102.00602"style="color:DARKVOILET;">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>with Madhu Sudan, Santhoshini Velusamy and David Xiang<br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2102.00602"style="color:DARKVOILET;">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>&nbsp;&nbsp;with Madhu Sudan, Santhoshini Velusamy and David Xiang<br> </li>
 <li><font size="4"><a href="dkkmsnotes.pdf"style="color:DARKVOILET;">An Exposition of Dinur-Khot-Kindler-Minzer-Safra’s Proof for the
-2-to-2 Games Conjecture.</a></font><br>with Chi-Ning Chou and Zhao Song<br> </li>
+2-to-2 Games Conjecture.</a></font><br>&nbsp;&nbsp;with Chi-Ning Chou and Zhao Song<br> </li>
 
 
 <p></p><h2>Teaching</h2>
