--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ My research is focussed on complexity theory and algorithms, specifically the co
 
 
 <p></p><h2>Teaching</h2>
-<li><font size="4"><a href="http://people.seas.harvard.edu/~madhusudan/courses/Spring2019/"style="color:DARKVOILET;"> Information Theory in Computer Science</a> (Harvard CS229r, Spring 2019)</font><br>Graduate Teaching Fellow, assistant to Madhu Sudan.<br></li>
+<li><font size="4"><a href="http://people.seas.harvard.edu/~madhusudan/courses/Spring2019/"style="color:DARKVOILET;"> Information Theory in Computer Science</a> (Harvard CS229r, Spring 2019)</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graduate Teaching Fellow, assistant to Madhu Sudan.<br></li>
 
 
 </div></div></div></body></html>
