--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ My research is focussed on complexity theory and algorithms, specifically the co
 
 
 			<p></p><h2>Publications</h2>
-<li><font size="4"><a href="https://arxiv.org/abs/2405.10238"style="color:DARKVOILET;">Rounding Large Independent Sets on Expanders.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Tim Hsieh and Pravesh K. Kothari<br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2405.10238"style="color:DARKVOILET;">Rounding Large Independent Sets on Expanders.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Tim Hsieh and Pravesh Kothari<br> </li>
 <li><font size="4"><a href="https://eccc.weizmann.ac.il/report/2024/020/"style="color:DARKVOILET;">Constant Degree Direct Product Testers with Small Soundness.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Noam Lifshitz and Dor Minzer<br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2308.09668"style="color:DARKVOILET;">Characterizing Direct Product Testing via Coboundary Expansion.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2024 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2304.07284"style="color:DARKVOILET;">Solving Unique Games over Globally Hypercontractive Graphs.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CCC 2024 <br> </li>
