--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ My research is focussed on complexity theory and algorithms, specifically the co
 
 
 			<p></p><h2>Publications</h2>
+<li><font size="4"><a href="https://arxiv.org/abs/2407.12762"style="color:DARKVOILET;">Quasi-Linear Size PCPs with Small Soundness from HDX.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer and Nikhil Vyas (Appendix D by Zhiwei Yun)<br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2405.10238"style="color:DARKVOILET;">Rounding Large Independent Sets on Expanders.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Tim Hsieh and Pravesh Kothari<br> </li>
 <li><font size="4"><a href="https://eccc.weizmann.ac.il/report/2024/020/"style="color:DARKVOILET;">Constant Degree Direct Product Testers with Small Soundness.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Noam Lifshitz and Dor Minzer<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOCS 2024 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2308.09668"style="color:DARKVOILET;">Characterizing Direct Product Testing via Coboundary Expansion.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2024 <br> </li>
