--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@ My research is focussed on complexity theory and algorithms, specifically the co
 
 
 <p></p><h2>Teaching</h2>
-<li><font size="4"><a href="http://people.seas.harvard.edu/~madhusudan/courses/Spring2019/"style="color:DARKVOILET;"> Information Theory in Computer Science</a> (Harvard CS229r, Spring 2019)</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graduate Teaching Fellow, assistant to Madhu Sudan.<br></li>
-
+<li><font size="4">18.424: Undergraduate Seminar in Information Theory, Fall 2024, MIT</font><br></li>
+<li><font size="4">18.200: Principles of Discrete Applied Mathematics, Spring 2024, MIT</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Recitation Leader. Instructors: Prof. Ankur Moitra and Prof. Peter Shor.<br></li>
+<li><font size="4">18.01: Single Variable Calculus, Fall 2023, MIT</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Recitation Leader. Instructor: Prof. Larry Guth.<br></li>
+<li><font size="4"><a href="http://people.seas.harvard.edu/~madhusudan/courses/Spring2019/"style="color:DARKVOILET;"> CS229r: Information Theory in Computer Science</a>, Spring 2019, Harvard</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graduate Teaching Fellow. Instructor: Prof. Madhu Sudan.<br></li>
 
 </div></div></div></body></html>
