--- a/index.html
+++ b/index.html
@@ -57,16 +57,19 @@ My research is focussed on complexity theory and algorithms, specifically the co
 <li><font size="4"><a href="https://arxiv.org/abs/1702.02970"style="color:DARKVOILET;"> The Price of Selection in Differential Privacy.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Jonathan Ullman<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COLT 2017<br></li>
 <li><font size="4"><a href="https://eccc.weizmann.ac.il/report/2016/132/"style="color:DARKVOILET;">On the Sensitivity Conjecture for Read-k Formulas</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Satyanarayana V. Lokam, Sébastien Tavenas and Ameya Velingker <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MFCS 2016<br> </li>
 
-<p></p><h2>Manuscripts</h2>
-<li><font size="4"><a href="https://arxiv.org/abs/2102.00602"style="color:DARKVOILET;">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Madhu Sudan, Santhoshini Velusamy and David Xiang<br> </li>
-<li><font size="4"><a href="dkkmsnotes.pdf"style="color:DARKVOILET;">An Exposition of Dinur-Khot-Kindler-Minzer-Safra’s Proof for the
-2-to-2 Games Conjecture.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Chi-Ning Chou and Zhao Song<br> </li>
-
 
 <p></p><h2>Teaching</h2>
 <li><font size="4">18.424: Undergraduate Seminar in Information Theory, Fall 2024, MIT</font><br></li>
 <li><font size="4">18.200: Principles of Discrete Applied Mathematics, Spring 2024, MIT</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Recitation Leader. Instructors: Prof. Ankur Moitra and Prof. Peter Shor.<br></li>
 <li><font size="4">18.01: Single Variable Calculus, Fall 2023, MIT</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Recitation Leader. Instructor: Prof. Larry Guth.<br></li>
 <li><font size="4"><a href="http://people.seas.harvard.edu/~madhusudan/courses/Spring2019/"style="color:DARKVOILET;"> CS229r: Information Theory in Computer Science</a>, Spring 2019, Harvard</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graduate Teaching Fellow. Instructor: Prof. Madhu Sudan.<br></li>
+
+		
+<p></p><h2>Other Manuscripts</h2>
+<li><font size="4"><a href="https://arxiv.org/abs/2102.00602"style="color:DARKVOILET;">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Madhu Sudan, Santhoshini Velusamy and David Xiang<br> </li>
+<li><font size="4"><a href="dkkmsnotes.pdf"style="color:DARKVOILET;">An Exposition of Dinur-Khot-Kindler-Minzer-Safra’s Proof for the
+2-to-2 Games Conjecture.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Chi-Ning Chou and Zhao Song<br> </li>
+
+
 
 </div></div></div></body></html>
