--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ My research is focussed on complexity theory and algorithms, specifically the co
 <li><font size="4"><a href="http://people.seas.harvard.edu/~madhusudan/courses/Spring2019/"style="color:DARKVOILET;"> CS229r: Information Theory in Computer Science</a>, Spring 2019, Harvard</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graduate Teaching Fellow. Instructor: Prof. Madhu Sudan.<br></li>
 
 		
-<p></p><h2>Other Manuscripts</h2>
+<p></p><h2>Expositions</h2>
 <li><font size="4"><a href="https://arxiv.org/abs/2102.00602"style="color:DARKVOILET;">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Madhu Sudan, Santhoshini Velusamy and David Xiang<br> </li>
 <li><font size="4"><a href="dkkmsnotes.pdf"style="color:DARKVOILET;">An Exposition of Dinur-Khot-Kindler-Minzer-Safra’s Proof for the
 2-to-2 Games Conjecture.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Chi-Ning Chou and Zhao Song<br> </li>
