--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ My research is focussed on complexity theory and algorithms, specifically the co
 <li><font size="4"><a href="https://arxiv.org/abs/2102.00602"style="color:DARKVOILET;">Elementary analysis of isolated zeroes of a polynomial system.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Madhu Sudan, Santhoshini Velusamy and David Xiang<br> </li>
 <li><font size="4"><a href="dkkmsnotes.pdf"style="color:DARKVOILET;">An Exposition of Dinur-Khot-Kindler-Minzer-Safra’s Proof for the
 2-to-2 Games Conjecture.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Chi-Ning Chou and Zhao Song<br> </li>
-<li><font size="4"><a href="Sparse_SMT.pdf"style="color:DARKVOILET;"></a></font></li>
+
+<font size="4"><a href="Sparse_SMT.pdf"style="color:DARKVOILET;"></a></font></li>
 
 
 
