--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@ My research is focussed on complexity theory and algorithms, specifically the co
 
 			<p></p><h2>Publications</h2>
 
-<li><font size="4"><a href="https://arxiv.org/abs/2501.00337"style="color:DARKVOILET;">Constant Degree Networks for Almost-Everywhere Reliable Transmission.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025 <br> </li>		
+	
 <li><font size="4"><a href="https://arxiv.org/abs/2407.12762"style="color:DARKVOILET;">Quasi-Linear Size PCPs with Small Soundness from HDX.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer and Nikhil Vyas (Appendix D by Zhiwei Yun)<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2405.10238"style="color:DARKVOILET;">Rounding Large Independent Sets on Expanders.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Tim Hsieh and Pravesh Kothari<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025 <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2501.00337"style="color:DARKVOILET;">Constant Degree Networks for Almost-Everywhere Reliable Transmission.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025 <br> </li>			
+<li><font size="4"><a href="https://arxiv.org/abs/2405.10238"style="color:DARKVOILET;">Near Optimal Constant Inapproximability under ETH for Fundamental Problems in Parameterized Complexity.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Karthik C. S. and Dor Minzer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2411.12438"style="color:DARKVOILET;">Dimension Reduction via Sum-of-Squares and Improved Clustering Algorithms for Non-Spherical Mixtures.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Prashanti Anderson, Rares-Darius Buhai, Pravesh Kothari and David Steurer<br> </li>
 <li><font size="4"><a href="https://eccc.weizmann.ac.il/report/2024/020/"style="color:DARKVOILET;">Constant Degree Direct Product Testers with Small Soundness.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Noam Lifshitz and Dor Minzer<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FOCS 2024 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2308.09668"style="color:DARKVOILET;">Characterizing Direct Product Testing via Coboundary Expansion.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2024 <br> </li>
