--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ My research is focussed on complexity theory and algorithms, specifically the co
 			<p></p><h2>Publications</h2>
 
 	
-<li><font size="4"><a href="https://arxiv.org/abs/2407.12762"style="color:DARKVOILET;">Quasi-Linear Size PCPs with Small Soundness from HDX.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer and Nikhil Vyas (Appendix D by Zhiwei Yun)<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025, co-winner of <b>best paper award.</b> <br> </li>
+<li><font size="4"><a href="https://arxiv.org/abs/2407.12762"style="color:DARKVOILET;">Quasi-Linear Size PCPs with Small Soundness from HDX.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer and Nikhil Vyas (Appendix D by Zhiwei Yun)<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025, co-winner of the <b><span style="color:#DD5E33">Best Paper Award.</span>span></b> <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2405.10238"style="color:DARKVOILET;">Rounding Large Independent Sets on Expanders.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Tim Hsieh and Pravesh Kothari<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025 <br> </li>
 <li><font size="4"><a href="https://arxiv.org/abs/2501.00337"style="color:DARKVOILET;">Constant Degree Networks for Almost-Everywhere Reliable Transmission.</a></font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Dor Minzer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025 <br> </li>			
 <li><font size="4">Near Optimal Constant Inapproximability under ETH for Fundamental Problems in Parameterized Complexity.</font><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with Karthik C. S. and Dor Minzer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STOC 2025 <br> </li>
