--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
 			<p>
 				
 <div class="boxed">
-I am a postdoc at MIT Math broadly interested in theoretical computer science. Before this I did a one-year postdoc at CMU hosted by Prof. Aayush Jain and Prof. Pravesh Kothari. I graduated from Harvard in 2022 advised by Prof. Madhu Sudan and was an undergrad at IIT Madras.
+I am a theoretical computer scientist and an Assistant Professor in the Allen School of Computer Science & Engineering at the University of Washington. My research explores complexity theory and algorithms and I am particularly interested in approximation algorithms, probabilistically checkable proofs, and high-dimensional expanders.
 
  <br>
-				
-My research is focussed on complexity theory and algorithms, specifically the complexity of combinatorial optimization problems, sum of squares algorithms and high dimensional expanders.
+	
+I received my undergrad degree from IIT Madras and my Ph.D. in Computer Science from Harvard University in 2022, advised by Prof. Madhu Sudan. After that, I was a postdoc at CMU, hosted by Professors Aayush Jain and Pravesh Kothari, followed by a postdoc in the MIT Department of Mathematics.
+
+ <br>	
+	
+<font color="red"> I will be recruiting Ph.D. students for the December 2025 application cycle. If you’re interested in working with me, please apply to the UW’s CS  Ph.D. program and list my name on your application.</font>
 </div>				
 
  <br> <br>
