--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ I received my undergrad degree from IIT Madras and my Ph.D. in Computer Science 
 
  <br>	
 	
-<font color="red"> I will be recruiting Ph.D. students for the December 2025 application cycle. If you’re interested in working with me, please apply to the UW’s CS  Ph.D. program and list my name on your application.</font>
+<font color="green"> I will be recruiting Ph.D. students for the December 2025 application cycle. If you’re interested in working with me, please apply to the UW’s CS  Ph.D. program and list my name on your application.</font>
 </div>				
 
  <br> <br>
