--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     #logo h1 { margin: 0 0 6px 0; font-size: 28px; }
     #logo p { margin: 0; color: var(--muted); }
 
-    section { margin-top: 40px; }
+    section { margin-top: 28px; }
+    #about { margin-top: 8px; }
+    header#hero { margin-bottom: 8px; }
+    #about .boxed { margin-top: 0; }
     section h2 { margin: 0 0 12px 0; font-size: 22px; }
     /* Prevent anchor from hiding under the sticky pane */
     section h2, header#hero { scroll-margin-top: 70px; }
