--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     /* Lists */
     ul.clean { list-style: none; padding-left: 0; margin: 0; }
     ul.clean li { margin: 12px 0; }
-    section#publications ul.clean li { margin: 6px 0 8px; line-height: 1.35; }
+    #publications ul.clean { margin-block: 0; }
+    #publications ul.clean li { margin-block: 2px; line-height: 1.22; }
     .paper-link { color: DarkViolet; text-decoration: none; }
     .paper-link:hover, .paper-link:focus { text-decoration: underline; }
     .venue { color: var(--muted); }
