--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     #about .boxed { margin-top: 0; }
     section h2 { margin: 0 0 12px 0; font-size: 22px; }
     /* Prevent anchor from hiding under the sticky pane */
-    section h2, header#hero { scroll-margin-top: 70px; }
+    section, header#hero { scroll-margin-top: 48px; }
 
     /* Lists */
     ul.clean { list-style: none; padding-left: 0; margin: 0; }
@@ -202,14 +202,12 @@
     <section id="teaching" aria-labelledby="teaching-heading">
       <h2 id="teaching-heading">Teaching</h2>
       <ul class="clean">
-<li><strong>CSE 431:</strong> Undergrad Complexity Theory, Fall 2025, UW</li>
-<li><strong>18.424:</strong> Undergraduate Seminar in Information Theory, Fall 2024, MIT</li>
-<li><strong>18.200:</strong> Principles of Discrete Applied Mathematics, Spring 2024 &amp; Spring 2025, MIT<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Recitation Leader. Instructors: Prof. Ankur Moitra and Prof. Peter Shor.</li>
-<li><strong>18.01:</strong> Single Variable Calculus, Fall 2023, MIT<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Recitation Leader. Instructor: Prof. Larry Guth.</li>
-<li><a class="paper-link" href="http://people.seas.harvard.edu/~madhusudan/courses/Spring2019/">CS229r: Information Theory in Computer Science</a>, Spring 2019, Harvard<br />
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graduate Teaching Fellow. Instructor: Prof. Madhu Sudan.</li>
+<li><strong>Fall 2025:</strong> CSE 431 - Undergrad Complexity Theory, UW</li>
+<li><strong>Spring 2025:</strong> 18.200 - Principles of Discrete Math, MIT (Recitation Leader, Instructor: Peter Shor)</li>
+<li><strong>Fall 2024:</strong> 18.424 - Undergraduate Seminar in Information Theory, MIT</li>
+<li><strong>Spring 2024:</strong> 18.200 - Principles of Discrete Math, MIT (Recitation Leader, Instructors: Peter Shor &amp; Ankur Moitra)</li>
+<li><strong>Fall 2023:</strong> 18.01 - Single Variable Calculus, MIT (Recitation Leader, Instructor: Prof. Larry Guth)</li>
+<li><strong>Spring 2019:</strong> CS229r - Information Theory in Computer Science, Harvard (TA, Instructor: Prof. Madhu Sudan)</li>
 </ul>
     </section>
 
