--- a/index.html
+++ b/index.html
@@ -28,18 +28,19 @@
     #logo p { margin: 0; color: var(--muted); }
 
     section { margin-top: 28px; }
-    #about { margin-top: 8px; }
-    header#hero { margin-bottom: 8px; }
+    #about { margin-top: 6px; }
+    header#hero { margin-bottom: 6px; }
     #about .boxed { margin-top: 0; }
+    #about .boxed p:first-child { margin-top: 12px; }
     section h2 { margin: 0 0 12px 0; font-size: 22px; }
     /* Prevent anchor from hiding under the sticky pane */
-    section, header#hero { scroll-margin-top: 48px; }
+    section, header#hero { scroll-margin-top: 96px; }
 
     /* Lists */
     ul.clean { list-style: none; padding-left: 0; margin: 0; }
     ul.clean li { margin: 12px 0; }
     #publications ul.clean { margin-block: 0; }
-    #publications ul.clean li { margin-block: 2px; line-height: 1.22; }
+    #publications ul.clean li { margin-block: 1.5px; line-height: 1.22; }
     .paper-link { color: DarkViolet; text-decoration: none; }
     .paper-link:hover, .paper-link:focus { text-decoration: underline; }
     .venue { color: var(--muted); }
