--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     #about .boxed p:first-child { margin-top: 12px; }
     section h2 { margin: 0 0 12px 0; font-size: 22px; }
     /* Prevent anchor from hiding under the sticky pane */
-    section, header#hero { scroll-margin-top: 96px; }
+    section, header#hero { scroll-margin-top: 48px; }
 
     /* Lists */
     ul.clean { list-style: none; padding-left: 0; margin: 0; }
@@ -79,7 +79,9 @@
       <div class="boxed2"><img src="./a3.jpg" id="photo" alt="Photo of Mitali Bafna" /></div>
       <div id="logo">
         <h1>Mitali Bafna</h1>
+        <p>mitalib at cs dot washington dot edu</p>
         <p>mitalibafna at gmail dot com</p>
+        <p>Gates Center Room 211</p>
       </div>
     </header>
 
