--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     #about .boxed p:first-child { margin-top: 12px; }
     section h2 { margin: 0 0 12px 0; font-size: 22px; }
     /* Prevent anchor from hiding under the sticky pane */
-    section, header#hero { scroll-margin-top: 48px; }
+    section, header#hero { scroll-margin-top: 96px; }
 
     /* Lists */
     ul.clean { list-style: none; padding-left: 0; margin: 0; }
-    ul.clean li { margin: 12px 0; }
+    ul.clean li { margin-block: 1.5px; line-height: 1.22; }
     #publications ul.clean { margin-block: 0; }
     #publications ul.clean li { margin-block: 1.5px; line-height: 1.22; }
     .paper-link { color: DarkViolet; text-decoration: none; }
@@ -68,6 +68,7 @@
         <a href="#about">About</a>
         <a href="#publications">Publications</a>
         <a href="#teaching">Teaching</a>
+        <a href="#service">Service</a>
       </nav>
     </div>
   </div>
@@ -78,9 +79,7 @@
       <div class="boxed2"><img src="./a3.jpg" id="photo" alt="Photo of Mitali Bafna" /></div>
       <div id="logo">
         <h1>Mitali Bafna</h1>
-        <p>mitalib at cs dot washington dot edu</p>
         <p>mitalibafna at gmail dot com</p>
-        <p>Gates Center Room 211</p>
       </div>
     </header>
 
@@ -214,6 +213,14 @@
     </section>
 
     <!-- Expositions -->
+    <section id="service" aria-labelledby="service-heading">
+      <h2 id="service-heading">Service</h2>
+      <ul class="clean">
+        <li><strong>PC Member:</strong> STOC 2025</li>
+        <li>Co-organized HDX Workshop at STOC, 2025 (with Max Hopkins, Yotam Dikstein &amp; Dor Minzer)</li>
+      </ul>
+    </section>
+
     <section id="expositions" aria-labelledby="expositions-heading">
       <h2 id="expositions-heading">Expositions</h2>
       <ul class="clean">
