--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     #about .boxed p:first-child { margin-top: 12px; }
     section h2 { margin: 0 0 12px 0; font-size: 22px; }
     /* Prevent anchor from hiding under the sticky pane */
-    section, header#hero { scroll-margin-top: 96px; }
+    section, header#hero { scroll-margin-top: 48px; }
 
     /* Lists */
     ul.clean { list-style: none; padding-left: 0; margin: 0; }
@@ -216,7 +216,7 @@
     <section id="service" aria-labelledby="service-heading">
       <h2 id="service-heading">Service</h2>
       <ul class="clean">
-        <li><strong>PC Member:</strong> STOC 2025</li>
+        <li>PC Member: STOC 2025</li>
         <li>Co-organized HDX Workshop at STOC, 2025 (with Max Hopkins, Yotam Dikstein &amp; Dor Minzer)</li>
       </ul>
     </section>
