--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
       <div id="logo">
         <h1>Mitali Bafna</h1>
         <p>mitalibafna at gmail dot com</p>
+        <p>mitalib at cs dot washington dot edu</p>
+        <p>Gates Center 211</p>
       </div>
     </header>
 
